# xatlas

./: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  astyle-code.bat  astyle-options.ini  example.cpp  gazebo.txt  premake msvc2015.bat  premake.bat  premake5.lua  test.cpp  xatlas.cpp  xatlas.h  xatlas_c.h  xatlas_raster.h
.github/workflows/: build.yml
cmake/: Config.cmake.in
example/: example.cpp
extra/: example.cpp  example_c99.c  example_repack.cpp  example_uvmesh.cpp  projects.lua  shaderc.lua  shaders.lua  test.cpp  viewer.cpp  viewer.h  viewer_atlas.cpp  viewer_bake.cpp  viewer_gui.cpp  viewer_model.cpp  xatlas.natvis
extra/shaders/: Checkerboard.fragment.sc  Checkerboard.varying.sc  Color.fragment.sc  Color.varying.sc  Flat.fragment.sc  Flat.varying.sc  Flat.vertex.sc  Gui.fragment.sc  Gui.varying.sc  Gui.vertex.sc  LightmapAverage.fragment.sc  Material.fragment.sc  Material.vertex.sc  RayBundleClear.fragment.sc  RayBundleClear.vertex.sc  RayBundleIntegrate.fragment.sc  RayBundleIntegrate.vertex.sc  RayBundleWrite.fragment.sc  fs_atomicCounterClear.sc  (+19 more)
nvcore/: Array.h  Array.inl  BitArray.h  Debug.cpp  Debug.h  Hash.h  HashMap.h  HashMap.inl  Memory.cpp  Memory.h  RadixSort.cpp  RadixSort.h  StrLib.cpp  StrLib.h  Utils.h  nvcore.h  scanf.c
nvimage/: BitMap.cpp  BitMap.h  Image.cpp  Image.h
nvmath/: Basis.cpp  Basis.h  Box.cpp  Box.h  Box.inl  Color.h  ConvexHull.cpp  ConvexHull.h  Fitting.cpp  Fitting.h  Matrix.cpp  Matrix.h  Matrix.inl  Morton.h  Plane.h  ProximityGrid.cpp  ProximityGrid.h  Random.h  Solver.cpp  Solver.h  Sparse.cpp  Sparse.h  TypeSerialization.cpp  TypeSerialization.h  Vector.cpp  Vector.h  Vector.inl  ftoi.h  nvmath.h
nvmesh/: BaseMesh.cpp  BaseMesh.h  MeshBuilder.cpp  MeshBuilder.h  MeshTopology.cpp  MeshTopology.h  QuadTriMesh.cpp
thekla/: thekla_atlas.cpp  thekla_atlas_test.cpp  thekla_mesh_load.h
(+171 files in other folders)
